--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "license": "MIT",
   "esy": {
     "build": [
-        ["bash", "-c", "#{os == 'windows' ? 'CC=x86_64-w64-mingw32-gcc ./configure' : './configure'}"]
+        ["bash", "-c", "#{os == 'windows' ? 'CC=x86_64-w64-mingw32-gcc ./configure --prefix=$cur__install' : './configure --prefix=$cur__install'}"],
+        ["make", "install"]
     ],
     "buildsInSource": "_build",
     "exportedEnv": {
-        "TREESITTER_INCLUDE_PATH": {
+        "ONIGURAMA_INCLUDE_PATH": {
             "val": "#{self.install / 'include'}",
             "scope": "global"
         },
-        "TREESITTER_LIB_PATH": {
+        "ONIGURAMA_LIB_PATH": {
             "val": "#{self.lib}",
             "scope": "global"
         }
