--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
         "ONIGURUMA_LIB_PATH": {
             "val": "#{self.lib}",
             "scope": "global"
+        },
+        "CAML_LD_LIBRARY_PATH": {
+            "val": "#{self.lib : $CAML_LD_LIBRARY_PATH}",
+            "scope": "global"
         }
     }
   },
