--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
             "val": "#{self.lib}",
             "scope": "global"
         },
-        "CAML_LD_LIBRARY_PATH": {
-            "val": "#{self.lib : $CAML_LD_LIBRARY_PATH}",
+        "LD_LIBRARY_PATH": {
+            "val": "#{self.lib : $LD_LIBRARY_PATH}",
             "scope": "global"
         }
     }
