--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ jobs:
   - template: .ci/esy-build-steps.yml
 
 - job: Windows
+  timeoutInMinutes: 0
   pool:
     vmImage: 'vs2017-win2016'
   steps:
