--- a/Makefile.in
+++ b/Makefile.in
@@ -94,7 +94,7 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
 	$(top_srcdir)/m4/ltversion.m4 $(top_srcdir)/m4/lt~obsolete.m4 \
-	$(top_srcdir)/configure.ac
+	$(top_srcdir)/acinclude.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 DIST_COMMON = $(srcdir)/Makefile.am $(top_srcdir)/configure \
@@ -346,7 +346,6 @@ pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
-runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
@@ -367,7 +366,7 @@ EXTRA_DIST = oniguruma.pc.in HISTORY README_japanese README.md \
 	doc/SYNTAX.md doc/UNICODE_PROPERTIES \
 	src/Makefile.windows src/config.h.windows.in \
 	src/config.h.win32 src/config.h.win64 \
-	windows/testc.c contributed/libfuzzer-onig.cpp contributed/makefile
+	windows/testc.c
 
 bin_SCRIPTS = onig-config
 do_subst = sed                                          \
@@ -921,9 +920,12 @@ oniguruma.pc: $(srcdir)/oniguruma.pc.in Makefile
 all-test:
 	cd test; make test
 
+archive:
+	git archive --format=tar --prefix=oniguruma/ HEAD | gzip > ../oniguruma-archive.tar.gz
+
 sanitize:
 	make clean
-	./configure CC=clang CFLAGS="-O -g -fsanitize=address"
+	./configure CFLAGS="-O -g -fsanitize=address" LDFLAGS="-fsanitize=address"
 	make
 	make all-test
 
