--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -12,3 +12,5 @@ steps:
     displayName: 'esy install'
   - script: esy build
     displayName: 'esy build'
+  - script: esy '@test'
+    displayName: 'Run native test suite'
